<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/imageIV"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/bgWeatherLL"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:gravity="end"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/temp_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:textSize="20dp"
                    tools:text="Temp" />

                <TextView
                    android:id="@+id/status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="#FFF"
                    tools:text="status" />
            </LinearLayout>

            <ImageView
                android:id="@+id/status_image"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/icon_weather"
                android:src="@drawable/day_2" />

        </LinearLayout>

        <TextView
            android:id="@+id/createDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            tools:text="currentDate"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bgCurrentLocationLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/mini_map"
            android:layout_width="80dp"
            android:layout_height="80dp"
            >

            <com.huawei.hms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                />

            <ImageView
                android:id="@+id/imageMapIV"
                android:layout_width="80dp"
                android:layout_height="80dp" />

        </RelativeLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/background_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3CF1EBF1"
            android:orientation="vertical"
            android:padding="8dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/location"
                    android:textColor="#FFF"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/addressTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:textSize="12dp"
                    tools:text="(Data Location)" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:textColor="#FFF"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/latitudeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:textSize="12dp"
                    tools:text="(Data Latitude)" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:textColor="#FFF"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/longitudeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/data_longitude"
                    android:textColor="#FFF"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


</RelativeLayout>